# Japanese-Image-Captioner-Lite

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: lite_llava_caption.yaml  lite_llava_caption_cpu_test.yaml
scripts/: generate_caption.py  generate_gpu.sh  setup_uv.sh  train_gpu.sh  train_lite_captioner.py
src/jicl/: __init__.py  config.py  data.py  generate.py  model.py  train.py
